--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github: [metadata]
 sass:
   load_paths:
     - _sass
-    - /usr/lib/ruby/gems/2.7.0/gems/bootstrap-4.3.1/assets/stylesheets
+    - assets/css/bootstrap
 
 # Build settings
 theme: jekyll-theme-slate
